--- a/package.json
+++ b/package.json
@@ -9,13 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@sanity/client": "^6.1.3",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~48.0.18",
+    "expo-device": "~5.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-currency-formatter": "^1.1.0",
+    "react-native": "0.71.8",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "13.4.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-redux": "^8.1.1",
+    "reselect": "^4.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-react": "^7.22.5",
+    "prettier": "2.8.8"
   },
   "private": true
 }
